# FalconScriptingEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.bat  configure.sh  premake5.lua
.github/workflows/: c-cpp.yml
examples/: factorial.fasm  factorial.flas  helloworld.fasm  helloworld.flas
pch/: FalconPCH.cpp  FalconPCH.hpp
src/: OpCode.hpp  Register.hpp  VM.cpp  VM.cpp.m4  VM.hpp  assembler.cpp  assembler.hpp  vm.cpp  vm.hpp
src/assembler/: AST.cpp  AST.hpp  CMakeLists.txt  Combiner.cpp  Combiner.hpp  Context.cpp  Context.hpp  FalconASM.make  FalconASMBin.make  Generator.cpp  Generator.hpp  Lexer.cpp  Lexer.hpp  Log.cpp  Log.hpp  LogLevel.hpp  Parser.cpp  Parser.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  Serialize.cpp  Serialize.hpp  Token.cpp  Token.hpp  TokenTypes.hpp  premake5.lua
src/assembler/exec/: main.cpp
src/assembler/test/: test.cpp
src/common/: CLIColors.cpp  CLIColors.hpp  Common.hpp  Endian.hpp  Logger.cpp  Logger.hpp  OpCode.cpp  OpCode.hpp  Register.cpp  Register.hpp  StringFormat.cpp  StringFormat.hpp
src/fali/: AST.cpp  AST.hpp  Attribute.cpp  Attribute.hpp  CMakeLists.txt  Context.cpp  Context.hpp  DebugContext.cpp  DebugContext.hpp  Function.cpp  Function.hpp  IR.cpp  IR.hpp  LiteralTraits.cpp  LiteralTraits.hpp  Mangle.cpp  Mangle.hpp  Object.cpp  Object.hpp  ObjectSpace.cpp  ObjectSpace.hpp  Reader.cpp  Reader.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  Serialize.cpp  Serialize.hpp  TypeFlags.hpp  Types.cpp  Types.hpp  VariableTraits.cpp  VariableTraits.hpp  premake5.lua
src/fali/exec/debugger/: main.cpp
src/fali/exec/falcon/: main.cpp
src/fali/optimizations/: ConstantFolding.cpp  MultipleContinuousAssignment.cpp  Optimizations.hpp  UnusedStatementResult.cpp  UnusedVariable.cpp
src/fali/test/: main.cpp
src/fcc/: CMakeLists.txt  premake5.lua
src/fcc/falconscript/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp
src/fcc/test/: main.cpp
src/jit/: JIT.hpp
src/vm/: CMakeLists.txt  DebugData.hpp  Debugger.cpp  Debugger.hpp  DebuggerData.hpp  Disassembler.cpp  Disassembler.hpp  Makefile  OpCode.cpp  OpCode.hpp  Register.cpp  Register.hpp  Signal.cpp  Signal.hpp  SignalImplement.hpp  VM.cpp  VM.cpp.m4  VM.hpp  premake5.lua
src/vm/test/: main.cpp  test
